--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "abstracts/variables";
 
 @import "base/base";
-
+@import "components/adventure";
 @import "components/animations";
 @import "components/header";
 @import "components/introduction";
