--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -39,8 +39,8 @@
         &:hover,
         &:active {
             background-position: 100%;
-            color: $color-nav-font;
-            border: 1px solid $color-nav-font;
+            color: $color-teal-nav-font;
+            border: 1px solid $color-teal-nav-font;
            
         }
     }
