--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,30 @@ body {
   font-family: 'Merriweather', serif;
   font-weight: 400;
   line-height: 1.7;
-  padding: 6.5px; }
+  padding: 6.5px;
+  background: #c4c4c4; }
+
+h2 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+  text-shadow: 0 0.5px 2px rgba(0, 0, 0, 0.5); }
+
+ul {
+  list-style: none; }
 
 .adventure {
+  margin: 10px auto;
   display: flex;
-  background: #c3e4ed;
-  margin-top: 10px;
+  background: #95b7c0;
   padding-top: 40px;
-  height: 550px; }
+  height: 550px;
+  box-shadow: 0 3px 5px 3px grey; }
 
 .advText {
   width: 50%;
-  padding-left: 40px;
+  padding-left: 45px;
   padding-right: 20px; }
-  .advText h1 {
-    text-align: center;
-    margin-bottom: 20px; }
   .advText p:not(last-child) {
     margin-bottom: 20px; }
   .advText p span {
@@ -63,16 +71,18 @@ body {
       left: 20%;
       top: 85px; }
     .advPhotos__photo--p2 {
-      right: 65px;
+      right: 67px;
       top: 122px; }
     .advPhotos__photo--p3 {
       left: 28%;
-      top: 218px; }
+      top: 217px; }
     .advPhotos__photo:hover {
       outline: 3px solid #4372AA;
-      transform: scale(1.075);
+      transform: scale(1.075) translateY(-5px);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
+  .advPhotos:hover .advPhotos__photo:not(:hover) {
+    transform: scale(0.95); }
 
 @keyframes moveInRight {
   0% {
@@ -86,11 +96,23 @@ body {
   100% {
     opacity: 1; } }
 
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0); }
+  to {
+    opacity: 1;
+    transform: none; } }
+
+.fadeInUp {
+  animation-name: fadeInUp; }
+
 header {
-  background: url("../img/headerImagecropblue.jpg") no-repeat top left;
+  background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
   background-size: cover;
   height: 400px;
   border: 1px solid #000;
+  box-shadow: 0 2px 3px 0 grey;
   position: relative; }
 
 .heading-primary {
@@ -99,22 +121,61 @@ header {
   backface-visibility: hidden; }
   .heading-primary--main {
     display: block;
-    font-size: 41px;
+    font-size: 50px;
     padding-top: 30px;
+    text-shadow: 1px 1px 4px #d3d3d3;
     animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
   .heading-primary--sub {
     display: block;
-    font-size: 31px;
+    font-size: 32px;
     font-style: italic;
     animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
 
-.sandSection {
-  background: url("../img/seigaiha.png") repeat top left;
-  margin: 10px 0;
+.contact_info {
+  position: absolute;
+  color: blue;
+  right: 200px;
+  bottom: 20px;
+  height: 100px;
+  width: 100px;
+  background: white; }
+
+.introduction {
+  background: #fff;
   font-size: 18px;
   text-align: center;
   padding: 15px 30px;
-  border: 1px dotted #000; }
+  border: 1px dotted #000;
+  box-shadow: 0 5px 5px 0 grey; }
+  .introduction__heading {
+    margin-top: 40px; }
+    .introduction__heading span {
+      margin: 0 15px; }
+
+.features {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  justify-content: space-around; }
+  .features i {
+    margin: 0 10px; }
+  .features h4 {
+    font-size: 18px;
+    margin: 10px 0;
+    border-bottom: 1px solid #eee;
+    color: #000; }
+  .features li {
+    color: #616161;
+    font-size: 16px; }
+  .features__box1 {
+    color: #5f7a2c;
+    font-weight: bold; }
+  .features__box2 {
+    color: #4372AA;
+    font-weight: bold; }
+  .features__box3 {
+    color: #a277bb;
+    font-weight: bold; }
 
 .navigation {
   width: 60%;
@@ -151,3 +212,136 @@ header {
   .navigation__current-item {
     border: 2px solid #000 !important;
     padding: 9px 14px !important; }
+
+.tours {
+  height: 750px;
+  background: rgba(0, 93, 136, 0.7);
+  border-top: 0.5px solid #f7f7f7;
+  box-shadow: inset 0 1px 5px 0 #00688B, 0 5px 5px 0 grey; }
+  .tours h2 {
+    padding-top: 30px;
+    padding-bottom: 40px;
+    color: #fff; }
+
+.planbox {
+  display: flex;
+  justify-content: space-evenly; }
+
+.card {
+  perspective: 1500px;
+  -moz-perspective: 1500px;
+  width: 25%;
+  height: 475px;
+  position: relative; }
+  .card__face {
+    background: #fff;
+    transition: all 1.5s .05s ease;
+    height: 475px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15); }
+    .card__face--back {
+      transform: rotateY(180deg); }
+      .card__face--back-1 {
+        background-image: linear-gradient(to right bottom, #a1c65B, #5f7a2c); }
+      .card__face--back-2 {
+        background-image: linear-gradient(to right bottom, #abcef6, #4372AA); }
+      .card__face--back-3 {
+        background-image: linear-gradient(to right bottom, #e6bcff, #a277bb); }
+  .card:hover .card__face--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__face--back {
+    transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 150px;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%); }
+    .card__picture-1 {
+      background-image: url("../img/MarshallPointLH_ME.jpg"); }
+    .card__picture-2 {
+      background-image: url("../img/HecetaHead_OR.jpg"); }
+    .card__picture-3 {
+      background-image: url("../img/WaltonLH_SantaCruzCA_distance.jpg"); }
+  .card__heading {
+    position: absolute;
+    top: 120px;
+    left: 10px;
+    font-size: 18px;
+    color: #fff;
+    width: 45%; }
+  .card__heading-span {
+    padding: .5rem 1rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background: #5f7a2c; }
+    .card__heading-span--2 {
+      background: #4372AA; }
+    .card__heading-span--3 {
+      background: #a277bb; }
+  .card__details {
+    padding-top: 22px;
+    margin-top: 40px; }
+    .card__details ul {
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        font-size: 16px;
+        font-weight: 700;
+        padding-bottom: 6px;
+        text-align: center; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card__cta {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    justify-content: space-around;
+    align-content: center; }
+    .card__cta a {
+      text-decoration: none;
+      color: #000; }
+
+.map {
+  height: 250px;
+  width: 100%;
+  border: 1px solid black;
+  align-self: center; }
+
+.btn {
+  background: #fff;
+  height: 50px;
+  margin: 50px auto;
+  padding: 10px 20px;
+  text-align: center;
+  vertical-align: center;
+  font-weight: 700;
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+  transition: all .2s ease-in-out; }
+  .btn-tour {
+    width: 30%; }
+  .btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15); }
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+  opacity: 0;
+  -webkit-animation-duration: .75s;
+  animation-duration: .75s; }
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
+  opacity: 1; }
