--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,27 @@
 $color-black: #000;
 $color-white: #fff;
-$color-nav-font: #00688B;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-blue-outline: #4372AA;
+$color-blue-tours: #394D87;
+// $color-blue-header: rgb(40, 125, 164);
+$color-blue-header: rgba(0, 93, 136, .7);
+
+$color-teal-light: #c3e4ed;
+$color-teal-nav-font: #00688B;
+$color-teal-dark: #7497A0;
+
+$color-purple-tour-3: rgb(162, 119, 187);
+$color-green-tour-light: #a1c65B;
+$color-green-tour: rgb(95, 122, 44);
+
+// $shadow-dark: 0 5px 5px 0 grey;
+
+$color-new-teal: rgb(149, 183, 192);
+
+
+
+
+
