--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,5 +16,19 @@ body {
     font-weight: 400;              
     line-height: 1.7;
     padding: 6.5px;
+    // background: #a9a9a9; 
+    background: #c4c4c4;
+
+}
+
+h2 {    
+    font-size: 24px;   
+    text-align: center;
+    margin-bottom: 20px; 
+    text-shadow: 0 .5px 2px rgba($color-black, .5);
+}
+
+ul {
+    list-style: none;
 }
 
