--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,11 @@
 header {
-	background: url("../img/headerImagecropblue.jpg") no-repeat top left;
+    // background: url("../img/headerImagecropblue.jpg") no-repeat top left;
+    background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
 	background-size: cover;    
     // height: 80vh; 
     height: 400px;
-    border: 1px solid $color-black;   		
+    border: 1px solid $color-black;   
+    box-shadow: 0 2px 3px 0 grey;	
 	position: relative;
 }
 
@@ -14,15 +16,17 @@ header {
 
     &--main {
         display: block;
-        font-size: 41px;
+        font-size: 50px;
         padding-top: 30px;
+        text-shadow: 1px 1px 4px #d3d3d3;
         animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);    
     }
     
     &--sub {
         display: block;
-        font-size: 31px;
+        font-size: 32px;
         font-style: italic;
         animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);   
     }
 }
+
