--- a/sass/components/_adventure.scss
+++ b/sass/components/_adventure.scss
@@ -1,13 +1,13 @@
 .adventure {
     // width: 90%;
-    margin: 10px auto;
+    margin: 0 auto;
     display: flex;   
     // background: $color-teal-light;      
     background: $color-new-teal;     
     padding-top: 40px;
     height: 550px;    
     // box-shadow: 3px 5px 10px 0 grey;
-    box-shadow: 0 3px 5px 3px grey;
+    // box-shadow: 0 3px 5px 3px grey;
 }
 
 .advText {
