--- a/sass/components/_introduction.scss
+++ b/sass/components/_introduction.scss
@@ -4,7 +4,7 @@
     // margin: 10px 0;
     font-size: 18px;
     text-align: center;
-    padding: 15px 30px;
+    padding: 25px 30px;
     border: 1px dotted $color-black;  
     box-shadow: 0 5px 5px 0 grey; 
     
@@ -23,19 +23,14 @@
 //     height: 800px;
 // }
 
-// .featureImages {
-//     display: flex;
-//     flex-direction: column;
-//     width: 50%;
-//     height: 600px;
-//     overflow: hidden;
+.featureImages {
+    display: flex;
+    padding-top: 30px;
 
-//     & img {        
-//         width: 75%;
-//     }
-
-    
-// }
+    & img {        
+        width: 75%;
+    }    
+}
 
 .features {
     display: flex;
@@ -44,10 +39,7 @@
     // height: 600px;
     padding-top: 40px;
     padding-bottom: 50px;
-    justify-content: space-around;
-
-    
-    
+    justify-content: space-around;   
 
     & i {
         margin: 0 10px;
