--- a/sass/components/_tours.scss
+++ b/sass/components/_tours.scss
@@ -184,7 +184,10 @@
 
 .js--wp-1,
 .js--wp-2,
-.js--wp-3 {
+.js--wp-3,
+.js--wp-4,
+.js--wp-5,
+.js--wp-6 {
     opacity: 0;
     -webkit-animation-duration: .75s;
             animation-duration: .75s;
@@ -192,7 +195,10 @@
 
 .js--wp-1.animated,
 .js--wp-2.animated,
-.js--wp-3.animated {
+.js--wp-3.animated,
+.js--wp-4.animated,
+.js--wp-5.animated,
+.js--wp-6.animated {
     opacity: 1;
 }
 
