added footer and changed header to enlarge background image

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-white: #fff;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-body-background: #c4c4c4;
 
 $color-blue-outline: #4372AA;
 $color-blue-tours: #394D87;
