--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "base/base";
 @import "components/adventure";
 @import "components/animations";
+@import "components/contact";
 @import "components/header";
 @import "components/introduction";
 @import "components/navigation";
