--- a/css/style.css
+++ b/css/style.css
@@ -106,12 +106,51 @@ ul {
 .fadeInUp {
   animation-name: fadeInUp; }
 
+.contacts {
+  display: flex;
+  justify-content: space-around;
+  background: #c3e4ed;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 700;
+  height: 250px;
+  margin: 0 auto;
+  margin-top: 3px;
+  line-height: 1.3;
+  border: 15px solid #fff; }
+  .contacts__sidebar {
+    display: flex;
+    flex-direction: column; }
+  .contacts__sidebar1 {
+    font-style: italic;
+    font-size: 15px;
+    justify-content: center; }
+    .contacts__sidebar1 img {
+      margin: 0 auto;
+      height: 125px;
+      padding-bottom: 10px; }
+  .contacts__sidebar2 {
+    justify-content: center;
+    font-size: 16px; }
+    .contacts__sidebar2 span {
+      font-size: 18px;
+      font-weight: 900;
+      border-bottom: 1px solid #95b7c0;
+      padding-bottom: 7px; }
+
+footer {
+  background: #fff;
+  height: 50px;
+  font-size: 13px;
+  font-style: italic;
+  text-align: center; }
+
 header {
   background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
   background-size: cover;
-  height: 400px;
-  border: 1px solid #000;
-  box-shadow: 0 2px 3px 0 grey;
+  height: 100vh;
+  border: 1px solid #7497A0;
+  box-shadow: 0 2px 3px 0 #7497A0;
   position: relative; }
 
 .heading-primary {
@@ -121,7 +160,7 @@ header {
   .heading-primary--main {
     display: block;
     font-size: 50px;
-    padding-top: 30px;
+    padding-top: 80px;
     text-shadow: 1px 1px 4px #d3d3d3;
     animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
   .heading-primary--sub {
@@ -130,13 +169,20 @@ header {
     font-style: italic;
     animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
 
+.quickContact {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 185px;
+  left: 700px;
+  font-size: 17px; }
+
 .introduction {
   background: #fff;
   font-size: 18px;
   text-align: center;
   padding: 25px 30px;
-  border: 1px dotted #000;
-  box-shadow: 0 5px 5px 0 grey; }
+  box-shadow: 0 5px 5px 0 #7497A0; }
   .introduction__heading {
     margin-top: 40px; }
     .introduction__heading span {
@@ -177,7 +223,7 @@ header {
   width: 60%;
   float: left;
   position: absolute;
-  bottom: 32px;
+  bottom: 185px;
   left: 20px;
   opacity: 0;
   animation: 1s fadeIn 2.2s forwards; }
@@ -205,14 +251,10 @@ header {
     background-position: 100%;
     color: #00688B;
     border: 1px solid #00688B; }
-  .navigation__current-item {
-    border: 2px solid #000 !important;
-    padding: 9px 14px !important; }
 
 .tours {
   height: 750px;
   background: rgba(0, 93, 136, 0.7);
-  border-top: 0.5px solid #f7f7f7;
   box-shadow: inset 0 1px 5px 0 #00688B, 0 5px 5px 0 grey; }
   .tours h2 {
     padding-top: 30px;
