--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,10 +2,10 @@ header {
     // background: url("../img/headerImagecropblue.jpg") no-repeat top left;
     background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
 	background-size: cover;    
-    // height: 80vh; 
-    height: 400px;
-    border: 1px solid $color-black;   
-    box-shadow: 0 2px 3px 0 grey;	
+    height: 100vh; 
+    // height: 400px;
+    border: 1px solid $color-teal-dark;   
+    box-shadow: 0 2px 3px 0 $color-teal-dark;	
 	position: relative;
 }
 
@@ -17,7 +17,8 @@ header {
     &--main {
         display: block;
         font-size: 50px;
-        padding-top: 30px;
+        // padding-top: 30px;
+        padding-top: 80px;
         text-shadow: 1px 1px 4px #d3d3d3;
         animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);    
     }
@@ -28,5 +29,15 @@ header {
         font-style: italic;
         animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);   
     }
+}
+
+.quickContact {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 185px;
+    left: 700px;
+    font-size: 17px;
+
 }
 
