--- a/sass/components/_tours.scss
+++ b/sass/components/_tours.scss
@@ -2,7 +2,7 @@
     height: 750px;    
     // background: #99B3BA; 
     background: $color-blue-header;
-    border-top: .5px solid $color-grey-light-1;
+    // border-top: .5px solid $color-grey-light-1;
     box-shadow:inset 0 1px 5px 0 $color-teal-nav-font, 0 5px 5px 0 grey;
     
     & h2 {
