--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-blue-header: rgba(0, 93, 136, .7);
 $color-teal-light: #c3e4ed;
 $color-teal-nav-font: #00688B;
 $color-teal-dark: #7497A0;
+$color-teal-header-address: rgb(50, 101, 105);
 
 $color-purple-tour-3: rgb(162, 119, 187);
 $color-green-tour-light: #a1c65B;
