--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "components/adventure";
 @import "components/animations";
 @import "components/contact";
+@import "components/footer";
 @import "components/header";
 @import "components/introduction";
 @import "components/navigation";
