--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,8 @@
 header {
     // background: url("../img/headerImagecropblue.jpg") no-repeat top left;
     background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
-	background-size: cover;    
+    background-size: cover;  
+    background-position: center;     
     height: 100vh; 
     // height: 400px;
     border: 1px solid $color-teal-dark;   
