--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,52 @@ ul {
   font-style: italic;
   text-align: center; }
 
+.backgroundImage3 {
+  background: url("../img/ps_neutral.png") repeat top left;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px; }
+  .backgroundImage3 span {
+    color: #326569;
+    font-style: italic;
+    font-weight: 900;
+    text-decoration-line: underline; }
+
+table {
+  border: 2px solid #008899;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto; }
+  table caption {
+    font-size: 2em;
+    color: #326569;
+    font-weight: bold;
+    font-family: 'Dancing Script', cursive;
+    background: #EEDFCC;
+    padding: 10px;
+    border: 2px solid #008B99; }
+  table th {
+    border: 2px solid #008B99;
+    height: 30px;
+    background-color: #89AEB3; }
+  table td {
+    border: 2px solid #008B99;
+    color: black;
+    background-color: #B0E0E6;
+    font-family: Helvetica;
+    font-size: 20px;
+    text-align: center;
+    line-height: 1.3; }
+    table td img {
+      margin-top: 6px; }
+
+.roundBorderAqua {
+  border-style: solid;
+  border-color: #005D66;
+  border-radius: 5%; }
+
 .footer {
   height: 325px;
   width: 100%;
