made footer responsive

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,10 @@ $color-blue-outline: #4372AA;
 $color-blue-tours: #394D87;
 // $color-blue-header: rgb(40, 125, 164);
 $color-blue-header: rgba(0, 93, 136, .7);
+$color-blue-lighthouse-icon: rgb(99, 150, 188);
+$color-blue-lighthouse-icon-dark: rgb(124, 167, 199);
+$color-blue-lighthouse-icon-light: rgb(157, 189, 213);
+
 
 $color-teal-light: #c3e4ed;
 $color-teal-nav-font: #00688B;
@@ -16,6 +20,7 @@ $color-teal-dark: #7497A0;
 $color-teal-header-address: rgb(50, 101, 105);
 
 $color-purple-tour-3: rgb(162, 119, 187);
+
 $color-green-tour-light: #a1c65B;
 $color-green-tour: rgb(95, 122, 44);
 
