--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Merriweather', serif;
   font-weight: 400;
   line-height: 1.7;
-  padding: 6.5px;
+  padding: 0 6.5px;
   background: #c4c4c4; }
 
 h2 {
@@ -167,13 +167,19 @@ ul {
   text-align: center;
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px; }
+  padding-top: 25px;
+  padding-bottom: 25px; }
   .backgroundImage3 span {
-    color: #326569;
+    color: #6396bc;
     font-style: italic;
     font-weight: 900;
-    text-decoration-line: underline; }
+    text-decoration-line: underline;
+    padding-top: 10px;
+    padding-bottom: 15px; }
+  .backgroundImage3 p {
+    padding: 10px 55px;
+    font-weight: 700;
+    font-size: 18px; }
 
 table {
   border: 2px solid #008899;
@@ -182,20 +188,21 @@ table {
   margin-right: auto; }
   table caption {
     font-size: 2em;
-    color: #326569;
+    color: rgba(0, 93, 136, 0.7);
     font-weight: bold;
     font-family: 'Dancing Script', cursive;
     background: #EEDFCC;
     padding: 10px;
-    border: 2px solid #008B99; }
+    border: 2px solid rgba(0, 93, 136, 0.7); }
   table th {
-    border: 2px solid #008B99;
+    border: 2px solid rgba(0, 93, 136, 0.7);
     height: 30px;
-    background-color: #89AEB3; }
+    background-color: rgba(0, 93, 136, 0.7);
+    color: #fff; }
   table td {
-    border: 2px solid #008B99;
+    border: 2px solid #647A80;
     color: black;
-    background-color: #B0E0E6;
+    background-color: #9dbdd5;
     font-family: Helvetica;
     font-size: 20px;
     text-align: center;
@@ -203,10 +210,35 @@ table {
     table td img {
       margin-top: 6px; }
 
+.roundBorder {
+  border: 2px solid #586c87;
+  border-radius: 5%;
+  box-shadow: 5px 5px 30px #586c87; }
+
 .roundBorderAqua {
-  border-style: solid;
-  border-color: #005D66;
+  border-style: 2px solid #005D66;
   border-radius: 5%; }
+
+.spacer {
+  height: 50px; }
+
+.padParagraph {
+  padding: 10px 50px; }
+
+.customerReviews {
+  background-color: #7388a4;
+  background-color: #8f9fb6;
+  padding: 10px; }
+  .customerReviews h3 {
+    padding-bottom: 15px;
+    font-size: 22px;
+    font-weight: 700; }
+  .customerReviews img {
+    display: block;
+    margin: 20px auto; }
+  .customerReviews p {
+    font-family: 'Satisfy', cursive;
+    font-size: 25px; }
 
 .footer {
   height: 325px;
@@ -218,6 +250,10 @@ table {
   background-attachment: fixed;
   position: relative;
   opacity: 80%; }
+  @media only screen and (max-width: 480px) {
+    .footer {
+      height: 214px;
+      background: url("../img/oceanWave5cropped.jpg") no-repeat; } }
   .footer__nav {
     display: flex;
     justify-content: center;
@@ -232,37 +268,66 @@ table {
       text-decoration: none;
       font-size: 18px;
       padding: 5px 35px; }
+      @media only screen and (max-width: 680px) {
+        .footer__nav li a {
+          font-size: 14px;
+          padding: 4px 20px; } }
+      @media only screen and (max-width: 480px) {
+        .footer__nav li a {
+          font-size: 13px;
+          padding: 3px 10px; } }
   .footer__copyright {
     position: absolute;
     bottom: 10px;
     right: 10px;
     color: white;
     font-size: 12px; }
+    @media only screen and (max-width: 480px) {
+      .footer__copyright {
+        font-size: 11px;
+        bottom: 5px; } }
 
-header {
-  background: url("../img/WaltonLHmaybe.jpg") no-repeat top left;
-  background-size: cover;
-  background-position: center;
+.header {
   height: 100vh;
+  background-size: cover;
+  background-position: top left;
   border: 1px solid #7497A0;
   box-shadow: 0 2px 3px 0 #7497A0;
   position: relative; }
+  .header__home {
+    background: url("../img/WaltonLHmaybe.jpg") no-repeat;
+    background-size: cover;
+    background-position: top left; }
+  .header__destination {
+    background: url("../img/headerDestinations.jpeg");
+    background-size: cover;
+    background-position: top left; }
+  @media only screen and (max-width: 960px) {
+    .header {
+      background: url("../img/WaltonLHcrop.jpg") no-repeat; } }
 
 .heading-primary {
   color: #000;
-  padding-left: 20px;
-  backface-visibility: hidden; }
+  padding-left: 20px; }
+  .heading-primary--home {
+    backface-visibility: hidden;
+    animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
   .heading-primary--main {
     display: block;
     font-size: 50px;
     padding-top: 80px;
-    text-shadow: 1px 1px 4px #d3d3d3;
-    animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+    text-shadow: 1px 1px 4px #d3d3d3; }
+    @media only screen and (max-width: 960px) {
+      .heading-primary--main {
+        font-size: 40px;
+        padding-top: 60px; } }
   .heading-primary--sub {
     display: block;
     font-size: 32px;
-    font-style: italic;
-    animation: moveInRight 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+    font-style: italic; }
+    @media only screen and (max-width: 960px) {
+      .heading-primary--sub {
+        font-size: 20px; } }
 
 .quickContact {
   display: flex;
@@ -274,8 +339,14 @@ header {
   position: absolute;
   bottom: 185px;
   left: 700px;
-  font-size: 18px;
-  animation: fadeIn 5s; }
+  font-size: 18px; }
+  @media only screen and (max-width: 960px) {
+    .quickContact {
+      font-size: 15px;
+      left: 20px;
+      bottom: 300px; } }
+  .quickContact__home {
+    animation: fadeIn 5s; }
 
 .introduction {
   background: #fff;
@@ -325,9 +396,10 @@ header {
   float: left;
   position: absolute;
   bottom: 185px;
-  left: 20px;
-  opacity: 0;
-  animation: 1s fadeIn 2.2s forwards; }
+  left: 20px; }
+  .navigation__home {
+    opacity: 0;
+    animation: 1s fadeIn 2.2s forwards; }
   .navigation__list {
     display: flex; }
   .navigation__item {
@@ -348,6 +420,19 @@ header {
     background-image: linear-gradient(115deg, transparent 0%, transparent 50%, #fff 50%);
     background-size: 220%;
     transition: all .3s; }
+    @media only screen and (max-width: 960px) {
+      .navigation__link:link, .navigation__link:visited {
+        font-size: 14px;
+        width: 100px;
+        padding: 5px 10px; } }
+  .navigation__link--current {
+    color: #fff !important;
+    background: #4372AA !important;
+    background-size: cover;
+    background-position: top left;
+    border: 1.3px solid #4372AA !important;
+    border-radius: 10%;
+    font-weight: 900; }
   .navigation__link:hover, .navigation__link:active {
     background-position: 100%;
     color: #00688B;
@@ -463,6 +548,7 @@ header {
   padding: 10px 20px;
   text-align: center;
   vertical-align: center;
+  font-size: 15px;
   font-weight: 700;
   border-radius: 5px;
   border: 1px solid black;
