--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,7 @@ body {
     font-family: 'Merriweather', serif;
     font-weight: 400;              
     line-height: 1.7;
-    padding: 6.5px;
+    padding: 0 6.5px;
     // background: #a9a9a9; 
     background: #c4c4c4;
 
