--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,8 +1,4 @@
-.footer {
-    // display: none;
-    // position: fixed;
-    // left: 0;
-    // bottom: 0;
+.footer {    
     height: 325px;  
     width: 100%; 
     background: url("../img/oceanWave5.jpg") no-repeat;
@@ -11,7 +7,12 @@
     background-position: center;
     background-attachment: fixed;  
     position: relative;
-    opacity: 80%;
+    opacity: 80%;  
+    
+    @include small-screens {
+        height: 214px;
+        background: url("../img/oceanWave5cropped.jpg") no-repeat;
+    }    
     
     &__nav {
         display: flex;         
@@ -27,7 +28,16 @@
         text-shadow: 0px .25px .25px $color-white;        
         text-decoration: none; 
         font-size: 18px;        
-        padding: 5px 35px; 
+        padding: 5px 35px;
+        
+        @include medium-screens {
+            font-size: 14px;
+            padding: 4px 20px;
+        }
+        @include small-screens {
+            font-size: 13px;
+            padding: 3px 10px;
+        }
         }        
      }   
      
@@ -37,6 +47,10 @@
         right: 10px;     
         color: white;
         font-size: 12px;
+
+        @include small-screens {
+            font-size: 11px; 
+            bottom: 5px;                             
+        }
     }
 }
-
