--- a/sass/components/_tours.scss
+++ b/sass/components/_tours.scss
@@ -167,6 +167,7 @@
     padding: 10px 20px;
     text-align: center;
     vertical-align: center;
+    font-size: 15px;
     font-weight: 700;
     border-radius: 5px;
     border: 1px solid black;
