--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
+@import "abstracts/mixins";
 @import "abstracts/variables";
 
 @import "base/base";
+
 @import "components/adventure";
 @import "components/animations";
 @import "components/contact";
